--- a/tpls/knowledgeRepo/knowledgeAdd.html
+++ b/tpls/knowledgeRepo/knowledgeAdd.html
@@ -105,7 +105,7 @@
 
 </head>
 <body ng-app="knlgAdd">
-<div class="basic-grey" ng-controller="knlgAddCtrl">
+<div class="basic-grey " ng-controller="knlgAddCtrl">
     <form method="post" class="STYLE-NAME" id="knowledge" >
         <h1>知识录入
             <!--<span>Please fill all the texts in the fields.</span>-->
@@ -135,7 +135,7 @@
 
         </label>
 
-        <label>
+        <label style="height: 36px">
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <div class="pull-right" style="margin-right: 50px">
             <input type="button" class="button" id="back" value="返回" />
