--- a/tpls/home.html
+++ b/tpls/home.html
@@ -263,6 +263,7 @@
 
 		<script src="/javascripts/ace-elements.min.js"></script>
 		<script src="/javascripts/ace.min.js"></script>
+		<script src="/javascripts/web-storage-cache.min.js"></script>
 
 		<script src="/plugins/toastr/toastr.min.js"></script>
 		<script src="/plugins/toastr/toastrSetting.js"></script>
