--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -240,6 +240,10 @@
     var str = location.href; //取得整个地址栏
     var num = str.indexOf("?");
     str = str.substr(num + 1);
+    var wsCache=new WebStorageCache({
+        storage:'sessionStorage',
+        exp:900
+    });
     $(function () {
 
 
@@ -248,9 +252,9 @@
             type: "GET",
             url: url,
             dataType: "json",
-            headers: {"Current-UserId": JSON.parse(window.sessionStorage.getItem("currUser")).id},
+            headers: {"Current-UserId": JSON.parse(wsCache.get("currUser")).id},
             success: function (data) {
-
+                wsCache.touch("currUser",900);
                 document.getElementById("kTitle").innerText = data.kTitle;
                 document.getElementById("aa").innerHTML = data.kAnswer;
                 document.getElementById("kUseCount").innerText = data.kUseCount;
