改列表序号显示

--- a/tpls/knowledgeRepo/knowledge.html
+++ b/tpls/knowledgeRepo/knowledge.html
@@ -241,7 +241,7 @@
 
         <!--</label>-->
 
-        <label>
+        <label style="height: 36px">
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <div class="pull-right" style="margin-right: 50px">
                 <input type="button" class="button" id="show" value="显示审批记录"/>
