--- a/tpls/knowledgeRepo/knowledgeApprova.html
+++ b/tpls/knowledgeRepo/knowledgeApprova.html
@@ -225,7 +225,7 @@
 
         </label>
 
-        <label>
+        <label style="height: 36px">
             <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <div class="pull-right" style="margin-right: 50px">
                 <input type="submit" class="button" id="agree" value="通过"/>
