--- a/tpls/resource/resourceAdd.html
+++ b/tpls/resource/resourceAdd.html
@@ -96,7 +96,7 @@
 <body ng-app="resourceAdd">
 
 
-<div class="container basic-grey" >
+<div class=" basic-grey" >
     <div class="row">
     <div class="col-sm-12">
 
