--- a/tpls/role/roleAdd.html
+++ b/tpls/role/roleAdd.html
@@ -95,7 +95,7 @@
 <body ng-app="roleAdd">
 
 
-<div class="container basic-grey" >
+<div class="basic-grey" >
     <div class="row">
     <div class="col-sm-12">
 
